--- a/index.html
+++ b/index.html
@@ -29,6 +29,40 @@
       </span>
     </div>
   </nav>
-    
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card mb-3">
+          <img src="https://i.imgur.com/QdnAb1D.jpg" class="card-img-top" alt="Flying Boy">
+          <div class="card-body">
+            <h5 class="card-title">Personal</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card mb-3">
+          <img src="https://i.imgur.com/CPWsJH3.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Professional</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card mb-3">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+      </div>
+      </div>
+    </div>
+  
 </body>
 </html>
