adding jumbotron, images

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
     </div>
   </nav>
   <div class="container">
+    <div class="col-md-12 mt-5">
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">Fluid jumbotron</h1>
+          <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+        </div>
+      </div>
+    </div>
     <div class="row">
       <div class="col-md-4">
         <div class="card mb-3">
@@ -53,9 +61,9 @@
       </div>
       <div class="col-md-4">
         <div class="card mb-3">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="https://i.imgur.com/ae9Akrj.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Portfolio</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
