--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #c2d6d6;">
-    <a class="navbar-brand" href="#">Navbar w/ text</a>
+    <a class="navbar-brand" href="#">Philip Prewitt, LPC</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -25,7 +25,7 @@
         </li>
       </ul>
       <span class="navbar-text">
-        Navbar text with an inline element
+        Developing Digital Tools to Increase Mental Health Access
       </span>
     </div>
   </nav>
@@ -40,8 +40,8 @@
     </div>
     <div class="row">
       <div class="col-md-4">
-        <div class="card mb-3">
-          <img src="https://i.imgur.com/QdnAb1D.jpg" class="card-img-top" alt="Flying Boy">
+        <div class="card mb-3" >
+          <img src="https://i.imgur.com/nEePfyl.jpg" class="card-img-top" alt="Flying Boy">
           <div class="card-body">
             <h5 class="card-title">Personal</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -51,7 +51,7 @@
       </div>
       <div class="col-md-4">
         <div class="card mb-3">
-          <img src="https://i.imgur.com/CPWsJH3.jpg" class="card-img-top" alt="...">
+          <img src="https://i.imgur.com/fFbGwlI.jpg" class="card-img-top" alt="..." >
           <div class="card-body">
             <h5 class="card-title">Professional</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -61,7 +61,7 @@
       </div>
       <div class="col-md-4">
         <div class="card mb-3">
-          <img src="https://i.imgur.com/ae9Akrj.jpg" class="card-img-top" alt="...">
+          <img src="https://i.imgur.com/eo9rfT4.jpg" class="card-img-top" alt="..." >
           <div class="card-body">
             <h5 class="card-title">Portfolio</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
