--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <style>
+      .jumbotron-fluid {
+        background-image: url("background mental health.jpg");
+        background-size: cover;
+      }
+    </style>
     <title>Philip Prewitt's Portfolio</title>
 </head>
-<body>
+<body class= "bg-secondary">
   <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #c2d6d6;">
     <a class="navbar-brand" href="#">Philip Prewitt, LPC</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,38 +39,38 @@
     <div class="col-md-12 mt-5">
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
-          <h1 class="display-4">Fluid jumbotron</h1>
-          <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+          <h1 class="display-4 text-white ">Philip Prewitt, LPC</h1>
+          <p class="lead text-white ">Working to improve access to mental health care.</p>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-4">
-        <div class="card mb-3" >
+        <div class="card mb-3 bg-light">
           <img src="https://i.imgur.com/nEePfyl.jpg" class="card-img-top" alt="Flying Boy">
           <div class="card-body">
             <h5 class="card-title">Personal</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Get to know me, my background, my mission and reach out!</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card mb-3">
+        <div class="card mb-3 bg-light">
           <img src="https://i.imgur.com/fFbGwlI.jpg" class="card-img-top" alt="..." >
           <div class="card-body">
             <h5 class="card-title">Professional</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Download my resume, see what I am learning, and what I am working on. </p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card mb-3">
+        <div class="card mb-3 bg-light">
           <img src="https://i.imgur.com/eo9rfT4.jpg" class="card-img-top" alt="..." >
           <div class="card-body">
             <h5 class="card-title">Portfolio</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">This is a portfolio of my digital projects, updated as projects are completed.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
