removing card borders, reordering cards, added footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,14 +24,14 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Professional</a>
+          <a class="nav-link" href="#">Features</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Personal/Contact</a>
+          <a class="nav-link" href="#">Pricing</a>
         </li>
       </ul>
       <span class="navbar-text">
-        Increasing Mental Health Access with Digital Tools 
+        Developing Digital Tools to Increase Mental Health Access
       </span>
     </div>
   </nav>
@@ -46,19 +46,17 @@
     </div>
     <div class="row">
       <div class="col-md-4">
-        <div class="card mb-3 bg-light border-0">
-          
-            <img src="https://i.imgur.com/eo9rfT4.jpg" class="card-img-top" alt="..." >
-            <div class="card-body">
-              <h5 class="card-title">Portfolio</h5>
-              <p class="card-text">This is a portfolio of my digital projects, updated as projects are completed.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
-          
+        <div class="card mb-3 bg-light">
+          <img src="https://i.imgur.com/nEePfyl.jpg" class="card-img-top" alt="Flying Boy">
+          <div class="card-body">
+            <h5 class="card-title">Personal</h5>
+            <p class="card-text">Get to know me, my background, my mission and reach out!</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card mb-3 bg-light border-0">
+        <div class="card mb-3 bg-light">
           <img src="https://i.imgur.com/fFbGwlI.jpg" class="card-img-top" alt="..." >
           <div class="card-body">
             <h5 class="card-title">Professional</h5>
@@ -68,24 +66,17 @@
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card mb-3 bg-light border-0">
-          <img src="https://i.imgur.com/nEePfyl.jpg" class="card-img-top" alt="Flying Boy">
+        <div class="card mb-3 bg-light">
+          <img src="https://i.imgur.com/eo9rfT4.jpg" class="card-img-top" alt="..." >
           <div class="card-body">
-            <h5 class="card-title">Personal/Contact</h5>
-            <p class="card-text">Get to know me, my background, my mission and reach out!</p>
+            <h5 class="card-title">Portfolio</h5>
+            <p class="card-text">This is a portfolio of my digital projects, updated as projects are completed.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div class="card-footer text-white text-center">
-         <p> &copy; 2020 Philip Prewitt philip.prewitt@gmail.com</p>
-        </div>
       </div>
     </div>
-  </div>
   
 </body>
 </html>
