--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
     <div class="col-md-12 mt-5">
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
-          <h1 class="display-4 text-white ">Philip Prewitt, LPC</h1>
-          <p class="lead text-white ">Working to improve access to mental health care.</p>
+          <h1 class="display-4 text-white"><strong>Philip Prewitt</strong></h1>
+          <h3 class="lead text-white">Licensed Professional Counselor</h3>
+          <p class="text-white ">Working to improve access to mental health care.</p>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-4">
         <div class="card mb-3 bg-light border-0">
-          
-            <img src="https://i.imgur.com/eo9rfT4.jpg" class="card-img-top" alt="..." >
+            <img src="abstract-business-code-coder-270348.jpg" class="card-img-top" alt="..." >
             <div class="card-body">
               <h5 class="card-title">Portfolio</h5>
               <p class="card-text">This is a portfolio of my digital projects, updated as projects are completed.</p>
@@ -81,7 +81,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="card-footer text-white text-center">
-         <p> &copy; 2020 Philip Prewitt philip.prewitt@gmail.com</p>
+         <p> &copy; 2020 Philip Prewitt, LPC philip.prewitt@gmail.com</p>
         </div>
       </div>
     </div>
