--- a/index.html
+++ b/index.html
@@ -48,18 +48,17 @@
     <div class="row">
       <div class="col-md-4">
         <div class="card mb-3 bg-light border-0">
-            <img src="abstract-business-code-coder-270348.jpg" class="card-img-top" alt="..." >
-            <div class="card-body">
-              <h5 class="card-title">Portfolio</h5>
-              <p class="card-text">This is a portfolio of my digital projects, updated as projects are completed.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
-          
+          <img src="abstract-business-code-coder-270348.jpg" class="card-img-top" alt="..." >
+          <div class="card-body">
+            <h5 class="card-title">Portfolio</h5>
+            <p class="card-text">This is a portfolio of my digital projects, updated as projects are completed.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="card mb-3 bg-light border-0">
-          <img src="https://i.imgur.com/fFbGwlI.jpg" class="card-img-top" alt="..." >
+          <img src="headshotsquare.jpg" class="card-img-top" alt="..." >
           <div class="card-body">
             <h5 class="card-title">Professional</h5>
             <p class="card-text">Download my resume, see what I am learning, and what I am working on. </p>
@@ -69,7 +68,7 @@
       </div>
       <div class="col-md-4">
         <div class="card mb-3 bg-light border-0">
-          <img src="https://i.imgur.com/nEePfyl.jpg" class="card-img-top" alt="Flying Boy">
+          <img src="FlyingBoysquare.jpg" class="card-img-top" alt="Flying Boy">
           <div class="card-body">
             <h5 class="card-title">Personal/Contact</h5>
             <p class="card-text">Get to know me, my background, my mission and reach out!</p>
