adding alt tags

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         background-size: cover;
       }
     </style>
-    <title>Philip Prewitt's Portfolio</title>
+    <title>Philip Prewitt, LPC - Home</title>
 </head>
 <body class= "bg-secondary">
   <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #c2d6d6;">
@@ -48,7 +48,7 @@
     <div class="row">
       <div class="col-md-4">
         <div class="card mb-3 bg-light border-0">
-          <img src="abstract-business-code-coder-270348.jpg" class="card-img-top" alt="..." >
+          <img src="abstract-business-code-coder-270348.jpg" class="card-img-top" alt="picture of code" >
           <div class="card-body">
             <h5 class="card-title">Portfolio</h5>
             <p class="card-text">This is a portfolio of my digital projects, updated as projects are completed.</p>
@@ -58,7 +58,7 @@
       </div>
       <div class="col-md-4">
         <div class="card mb-3 bg-light border-0">
-          <img src="headshotsquare.jpg" class="card-img-top" alt="..." >
+          <img src="headshotsquare.jpg" class="card-img-top" alt="headshot" >
           <div class="card-body">
             <h5 class="card-title">Professional</h5>
             <p class="card-text">Download my resume, see what I am learning, and what I am working on. </p>
