--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 </head>
 <body class= "bg-secondary">
   <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #c2d6d6;">
-    <a class="navbar-brand" href="#">Philip Prewitt, LPC</a>
+    <a class="navbar-brand" href="index.html">Philip Prewitt, LPC</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Professional</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Personal/Contact</a>
+          <a class="nav-link" href="contact.html">Personal/Contact</a>
         </li>
       </ul>
       <span class="navbar-text">
@@ -67,14 +67,18 @@
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card mb-3 bg-light border-0">
-          <img src="FlyingBoysquare.jpg" class="card-img-top" alt="Flying Boy">
-          <div class="card-body">
-            <h5 class="card-title">Personal/Contact</h5>
-            <p class="card-text">Get to know me, my background, my mission and reach out!</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        
+          <div class="card mb-3 bg-light border-0">
+            <a href="contact.html">
+              <img src="FlyingBoysquare.jpg" class="card-img-top" alt="Flying Boy">
+            </a>
+            <div class="card-body">
+              <h5 class="card-title">Personal/Contact</h5>
+              <p class="card-text">Get to know me, my background, my mission and reach out!</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
     </div>
     <div class="row">
