--- a/index.html
+++ b/index.html
@@ -46,27 +46,18 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4">
-        <div class="card mb-3 bg-light border-0">
-          <img src="abstract-business-code-coder-270348.jpg" class="card-img-top" alt="picture of code" >
-          <div class="card-body">
-            <h5 class="card-title">Portfolio</h5>
-            <p class="card-text">This is a portfolio of my digital projects, updated as projects are completed.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
+      
+      <div class="col-md-6">
         <div class="card mb-3 bg-light border-0">
           <img src="headshotsquare.jpg" class="card-img-top" alt="headshot" >
           <div class="card-body">
-            <h5 class="card-title">Professional</h5>
+            <h5 class="card-title">Professional/Portfolio</h5>
             <p class="card-text">Download my resume, see what I am learning, and what I am working on. </p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-6">
         
           <div class="card mb-3 bg-light border-0">
             <a href="contact.html">
