--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Professional</a>
+          <a class="nav-link" href="Portfolio.html">Professional/Portfolio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Personal/Contact</a>
