--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Professional</a>
+          <a class="nav-link" href="Portfolio.html">Professional/Portfolio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Personal/Contact</a>
@@ -49,10 +49,12 @@
       
       <div class="col-md-6">
         <div class="card mb-3 bg-light border-0">
-          <img src="headshotsquare.jpg" class="card-img-top" alt="headshot" >
+          <a href="Portfolio.html">
+            <img src="headshotsquare.jpg" class="card-img-top" alt="headshot" >
+          </a>
           <div class="card-body">
             <h5 class="card-title">Professional/Portfolio</h5>
-            <p class="card-text">Download my resume, see what I am learning, and what I am working on. </p>
+            <p class="card-text">View my resume, see what I am learning, and what I am working on. </p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
