updating cards/content on portfolio.html

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -36,12 +36,47 @@
             <div class="card mb-3 border-0 bg-light">
                 <img src="pano (2).JPG" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Bring on the Adventure</h5>
-                  <p class="card-text">I moved to Denver in 2003, and shortly after met my wife (it took me another 6 years to know I wanted to date her, and only a fwe months to know I wanted to spend the rest of my life with her). Since 2003, I have hiked or climbed all of Colorado's 14,000 ft peaks, gotten a masters degree, and welcomed my daughter and son into this world. I am grateful for all the opportunities to learn, play and love, and look forward to the next adventure.</p>
-                  <h5 class="card-title">Mission</h5>
-                  <p class="card-text">My wife and I both work in helping fields (mental health and social work). We have dedicated our lives to serving those whose lives are not as privileged as our own. My personal mission is to work to expand access to mental health care to all. I have found great satisfaction in providing mental health care, as well as assisting health care organizations develop more efficient means of delivering care to those in need.</p>
-                </div>
+                    <div class="alert alert-info" role="alert">
+                        Thanks for visiting! I will be updating this site with new features as they are developed. I'm still learning!
+                      </div>
+                  <h5 class="card-title">Work Experience</h5>
+                  <p class="card-text">I am currently working as a Provider Network Manager for Anthem, Inc. I manage a team of 10 people, running a national network of mental health therapists. I work with my team to develop contracts, administer those contracts, and increase our network provider satisfaction. I am focused on increasing access to mental health care within our provider network. I have contributed business requirements for enhancements to existing systems, and am currently working with a developer to create an appointment setting site for all of our contracted providers. </p>
+                  </div>
               </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card mb-3 bg-light border-0">
+                        <a href="index.html">
+                          <img src="abstract-business-code-coder-270348.jpg" class="card-img-top" alt="headshot" >
+                        </a>
+                        <div class="card-body">
+                          <h5 class="card-title">Responsive Portfolio Site</h5>
+                          <h6 class="card-title">(This Site)</h6>
+                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-3 bg-light border-0">
+                        <img src="abstract-business-code-coder-270348.jpg" class="card-img-top" alt="headshot" >
+                        <div class="card-body">
+                          <h5 class="card-title">Placeholder for Future Project</h5>
+                          <h6 class="card-title">(Coming Soon)</h6>
+                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-3 bg-light border-0">
+                          <img src="abstract-business-code-coder-270348.jpg" class="card-img-top" alt="headshot" >
+                        <div class="card-body">
+                          <h5 class="card-title">Placeholder for Future Project</h5>
+                          <h6 class="card-title">(Coming Soon)</h6>
+                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                      </div>
+                </div>
+            </div>
         </div>
         
      
