adding linkedin, github icons/links

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    
+    <script src="https://kit.fontawesome.com/0817df7929.js" crossorigin="anonymous"></script>
     <title>Philip Prewitt LPC-Portfolio</title>
 </head>
 <body class= "bg-secondary">
@@ -39,9 +39,11 @@
                     <div class="alert alert-info" role="alert">
                         Thanks for visiting! I will be updating this site with new features as they are developed. I'm still learning!
                       </div>
-                  <h5 class="card-title">Work Experience</h5>
+                  <h5 class="card-title">Current Employment</h5>
                   <p class="card-text">I am currently working as a Provider Network Manager for Anthem, Inc. I manage a team of 10 people, running a national network of mental health therapists. I work with my team to develop contracts, administer those contracts, and increase our network provider satisfaction. I am focused on increasing access to mental health care within our provider network. I have contributed business requirements for enhancements to existing systems, and am currently working with a developer to create an appointment setting site for all of our contracted providers. </p>
-                  </div>
+                    <a href="https://www.linkedin.com/in/philip-prewitt-b6422911/"><i class="fab fa-linkedin"></i>  Visit my linkedin</a><br>
+                    <a href="https://github.com/pprewitt"><i class="fab fa-github-square"></i>  Visit my github</a>
+                </div>
               </div>
             <div class="row">
                 <div class="col-md-4">
