--- a/Portfolio.html
+++ b/Portfolio.html
@@ -30,9 +30,9 @@
       </span>
     </div>
   </nav>
-  <div class="container mt-4">
+  <main class="container mt-4">
     <div class="row ">
-        <div class="col-md-12">
+        <article class="col-md-12">
             <div class="card mb-3 border-0 bg-light">
                 <img src="pano (2).JPG" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -46,7 +46,7 @@
                 </div>
               </div>
             <div class="row">
-                <div class="col-md-4">
+                <section class="col-md-4">
                     <div class="card mb-3 bg-light border-0">
                         <a href="index.html">
                           <img src="abstract-business-code-coder-270348.jpg" class="card-img-top" alt="headshot" >
@@ -57,8 +57,8 @@
                           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
                       </div>
-                </div>
-                <div class="col-md-4">
+                    </section>
+                <section class="col-md-4">
                     <div class="card mb-3 bg-light border-0">
                         <img src="abstract-business-code-coder-270348.jpg" class="card-img-top" alt="headshot" >
                         <div class="card-body">
@@ -67,8 +67,8 @@
                           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
                       </div>
-                </div>
-                <div class="col-md-4">
+                </section>
+                <section class="col-md-4">
                     <div class="card mb-3 bg-light border-0">
                           <img src="abstract-business-code-coder-270348.jpg" class="card-img-top" alt="headshot" >
                         <div class="card-body">
@@ -77,12 +77,12 @@
                           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
                       </div>
-                </div>
+                </section>
             </div>
-        </div>
+        </article>
         
      
-    </div>
+      </main>
  
   </div>
   <div class="row">
