--- a/contact.html
+++ b/contact.html
@@ -8,31 +8,39 @@
     <title>Philip Prewitt LPC-contact</title>
 </head>
 <body class= "bg-secondary">
+  <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #c2d6d6;">
+    <!-- brand button -->
     <a class="navbar-brand" href="index.html">Philip Prewitt, LPC</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
+        <!-- home button -->
         <li class="nav-item active">
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
+        <!-- portfolio button -->
         <li class="nav-item">
           <a class="nav-link" href="Portfolio.html">Professional/Portfolio</a>
         </li>
+        <!-- contact button -->
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Personal/Contact</a>
         </li>
       </ul>
+      <!-- tag line -->
       <span class="navbar-text">
         Increasing Mental Health Access with Digital Tools 
       </span>
     </div>
   </nav>
-  <div class="container mt-4">
+  <!-- main section -->
+  <main class="container mt-4">
     <div class="row ">
-        <div class="col-md-8">
+        <article class="col-md-8">
+          <!-- bio/mission section -->
             <div class="card mb-3 border-0 bg-light">
                 <img src="Flatiron.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -42,8 +50,9 @@
                   <p class="card-text">My wife and I both work in helping fields (mental health and social work). We have dedicated our lives to serving those whose lives are not as privileged as our own. My personal mission is to work to expand access to mental health care to all. I have found great satisfaction in providing mental health care, as well as assisting health care organizations develop more efficient means of delivering care to those in need.</p>
                 </div>
               </div>
-        </div>
-        <div class="col-md-4">
+            </article>
+          <!-- contact form section -->
+        <aside class="col-md-4">
             <div class="card mb-3 border-0 bg-light">
                 <div class="card-body">
                     <h5 class="card-title">Reach Out!</h5>
@@ -64,18 +73,15 @@
                     </div>
                     <button type="submit" class="btn btn-info ml-3 mb-4">Submit</button>
                 </form>
-             
-        </div>
-     
-    </div>
- 
-  </div>
-  <div class="row">
+            </div>
+          </aside>
+  </main>
+  <footer class="row">
     <div class="col-md-12">
       <div class="card-footer text-white text-center">
        <p> &copy; 2020 Philip Prewitt, LPC philip.prewitt@gmail.com</p>
       </div>
     </div>
-  </div>
+  </footer>
 </body>
 </html>
