semantic tags for index.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>Philip Prewitt, LPC - Home</title>
 </head>
 <body class= "bg-secondary">
+  <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #c2d6d6;">
     <a class="navbar-brand" href="index.html">Philip Prewitt, LPC</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,8 +37,10 @@
       </span>
     </div>
   </nav>
-  <div class="container">
+  <!-- main section -->
+  <main class="container">
     <div class="col-md-12 mt-5">
+     <!-- jumbotron mission hero--> 
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4 text-white"><strong>Philip Prewitt</strong></h1>
@@ -46,9 +49,9 @@
         </div>
       </div>
     </div>
-    <div class="row">
-      
-      <div class="col-md-6">
+    <article class="row">
+      <!-- portfolio card--> 
+      <section class="col-md-6">
         <div class="card mb-3 bg-light border-0">
           <a href="Portfolio.html">
             <img src="headshotsquare.jpg" class="card-img-top" alt="headshot" >
@@ -59,10 +62,10 @@
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
-      </div>
-      <div class="col-md-6">
-        
-          <div class="card mb-3 bg-light border-0">
+      </section>
+      <!-- contact card-->
+      <section class="col-md-6">
+        <div class="card mb-3 bg-light border-0">
             <a href="contact.html">
               <img src="FlyingBoysquare.jpg" class="card-img-top" alt="Flying Boy">
             </a>
@@ -72,17 +75,17 @@
               <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
-        </a>
+        </section>
+    </article>
+   </main>
+   <!-- footer-->
+  <footer class="row">
+    <div class="col-md-12">
+      <div class="card-footer text-white text-center">
+       <p> &copy; 2020 Philip Prewitt, LPC philip.prewitt@gmail.com</p>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div class="card-footer text-white text-center">
-         <p> &copy; 2020 Philip Prewitt, LPC philip.prewitt@gmail.com</p>
-        </div>
-      </div>
-    </div>
-  </div>
+  </footer>
   
 </body>
 </html>
