alt image tags, folder for images

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -8,6 +8,7 @@
     <title>Philip Prewitt LPC-Portfolio</title>
 </head>
 <body class= "bg-secondary">
+  <!-- navbar-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #c2d6d6;">
     <a class="navbar-brand" href="index.html">Philip Prewitt, LPC</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,12 +31,14 @@
       </span>
     </div>
   </nav>
+  <!--main-->
   <main class="container mt-4">
     <div class="row ">
-        <article class="col-md-12">
+      <article class="col-md-12">
             <div class="card mb-3 border-0 bg-light">
-                <img src="pano (2).JPG" class="card-img-top" alt="...">
+                <img src="img/pano (2).JPG" class="card-img-top" alt="mountain panorama">
                 <div class="card-body">
+                  <!--site alert-->
                     <div class="alert alert-info" role="alert">
                         Thanks for visiting! I will be updating this site with new features as they are developed. I'm still learning!
                       </div>
@@ -46,51 +49,50 @@
                 </div>
               </div>
             <div class="row">
+              <!-- project 1 (this site)-->
                 <section class="col-md-4">
                     <div class="card mb-3 bg-light border-0">
                         <a href="index.html">
-                          <img src="abstract-business-code-coder-270348.jpg" class="card-img-top" alt="headshot" >
+                          <img src="img/abstract-business-code-coder-270348.jpg" class="card-img-top" alt="screen of code" >
                         </a>
                         <div class="card-body">
                           <h5 class="card-title">Responsive Portfolio Site</h5>
                           <h6 class="card-title">(This Site)</h6>
-                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
                       </div>
                     </section>
                 <section class="col-md-4">
+                  <!-- project 2 (not yet made)-->
                     <div class="card mb-3 bg-light border-0">
-                        <img src="abstract-business-code-coder-270348.jpg" class="card-img-top" alt="headshot" >
+                        <img src="img/abstract-business-code-coder-270348.jpg" class="card-img-top" alt="screen of code" >
                         <div class="card-body">
                           <h5 class="card-title">Placeholder for Future Project</h5>
                           <h6 class="card-title">(Coming Soon)</h6>
-                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
                       </div>
                 </section>
+                <!-- project 3 (not yet made)-->
                 <section class="col-md-4">
                     <div class="card mb-3 bg-light border-0">
-                          <img src="abstract-business-code-coder-270348.jpg" class="card-img-top" alt="headshot" >
+                          <img src="img/abstract-business-code-coder-270348.jpg" class="card-img-top" alt="screen of code" >
                         <div class="card-body">
                           <h5 class="card-title">Placeholder for Future Project</h5>
                           <h6 class="card-title">(Coming Soon)</h6>
-                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
                       </div>
                 </section>
             </div>
         </article>
-        
-     
       </main>
  
   </div>
+  <!--footer-->
   <div class="row">
-    <div class="col-md-12">
+    <footer class="col-md-12">
       <div class="card-footer text-white text-center">
        <p> &copy; 2020 Philip Prewitt, LPC philip.prewitt@gmail.com</p>
       </div>
-    </div>
+    </footer>
   </div>
 </body>
 </html>
