--- a/index.html
+++ b/index.html
@@ -54,12 +54,11 @@
       <section class="col-md-6">
         <div class="card mb-3 bg-light border-0">
           <a href="Portfolio.html">
-            <img src="headshotsquare.jpg" class="card-img-top" alt="headshot" >
+            <img src="img/headshotsquare.jpg" class="card-img-top" alt="Philip Prewitt headshot" >
           </a>
           <div class="card-body">
             <h5 class="card-title">Professional/Portfolio</h5>
             <p class="card-text">View my resume, see what I am learning, and what I am working on. </p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
       </section>
@@ -67,7 +66,7 @@
       <section class="col-md-6">
         <div class="card mb-3 bg-light border-0">
             <a href="contact.html">
-              <img src="FlyingBoysquare.jpg" class="card-img-top" alt="Flying Boy">
+              <img src="img/FlyingBoysquare.jpg" class="card-img-top" alt="Flying Boy">
             </a>
             <div class="card-body">
               <h5 class="card-title">Personal/Contact</h5>
