fixed folder for background jumbotron image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/0817df7929.js" crossorigin="anonymous"></script>
     <style>
       .jumbotron-fluid {
-        background-image: url("background mental health.jpg");
+        background-image: url("img/background mental health.jpg");
         background-size: cover;
       }
     </style>
@@ -71,7 +71,6 @@
             <div class="card-body">
               <h5 class="card-title">Personal/Contact</h5>
               <p class="card-text">Get to know me, my background, my mission and reach out!</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
         </section>
