fixed image folder for flatiron picture

--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
         <article class="col-md-8">
           <!-- bio/mission section -->
             <div class="card mb-3 border-0 bg-light">
-                <img src="Flatiron.jpg" class="card-img-top" alt="...">
+                <img src="img/Flatiron.jpg" class="card-img-top" alt="adventure climbing">
                 <div class="card-body">
                   <h5 class="card-title">Bring on the Adventure</h5>
                   <p class="card-text">I moved to Denver in 2003, and shortly after met my wife (it took me another 6 years to know I wanted to date her, and only a fwe months to know I wanted to spend the rest of my life with her). Since 2003, I have hiked or climbed all of Colorado's 14,000 ft peaks, gotten a masters degree, and welcomed my daughter and son into this world. I am grateful for all the opportunities to learn, play and love, and look forward to the next adventure.</p>
