fixing article div as it does not pass html validation

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
       </div>
     </div>
-    <article class="row">
+    <div class="row">
       <!-- portfolio card--> 
       <section class="col-md-6">
         <div class="card mb-3 bg-light border-0">
@@ -74,7 +74,7 @@
             </div>
           </div>
         </section>
-    </article>
+    </div>
    </main>
    <!-- footer-->
   <footer class="row">
