--- a/Portfolio.html
+++ b/Portfolio.html
@@ -9,7 +9,7 @@
 </head>
 <body class= "bg-secondary">
   <!-- navbar-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #c2d6d6;">
+  <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light" style="background-color: #c2d6d6;">
     <a class="navbar-brand" href="index.html">Philip Prewitt, LPC</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -26,9 +26,6 @@
           <a class="nav-link" href="contact.html">Personal/Contact</a>
         </li>
       </ul>
-      <span class="navbar-text">
-        Increasing Mental Health Access with Digital Tools 
-      </span>
     </div>
   </nav>
   <!--main-->
@@ -94,5 +91,8 @@
       </div>
     </footer>
   </div>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
