--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body class= "bg-secondary">
   <!-- navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #c2d6d6;">
+  <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light" style="background-color: #c2d6d6;">
     <!-- brand button -->
     <a class="navbar-brand" href="index.html">Philip Prewitt, LPC</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,9 +31,6 @@
         </li>
       </ul>
       <!-- tag line -->
-      <span class="navbar-text">
-        Increasing Mental Health Access with Digital Tools 
-      </span>
     </div>
   </nav>
   <!-- main section -->
@@ -83,5 +80,8 @@
       </div>
     </div>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
