editing readme, some minor text content revisions

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/0817df7929.js" crossorigin="anonymous"></script>
-    <title>Philip Prewitt LPC-contact</title>
+    <title>Philip Prewitt LPC - Contact</title>
 </head>
 <body class= "bg-secondary">
   <!-- navbar -->
@@ -42,7 +42,7 @@
                 <img src="img/Flatiron.jpg" class="card-img-top" alt="adventure climbing">
                 <div class="card-body">
                   <h5 class="card-title">Bring on the Adventure</h5>
-                  <p class="card-text">I moved to Denver in 2003, and shortly after met my wife (it took me another 6 years to know I wanted to date her, and only a fwe months to know I wanted to spend the rest of my life with her). Since 2003, I have hiked or climbed all of Colorado's 14,000 ft peaks, gotten a masters degree, and welcomed my daughter and son into this world. I am grateful for all the opportunities to learn, play and love, and look forward to the next adventure.</p>
+                  <p class="card-text">I moved to Denver in 2003, and shortly after, I met my wife (it took me another 6 years to know I wanted to date her, and only a fwe months to know I wanted to spend the rest of my life with her). Since 2003, I have hiked or climbed all of Colorado's 14,000 ft peaks, gotten a masters degree, and welcomed my daughter and son into this world. I am grateful for all the opportunities to learn, play and love, and look forward to the next adventure.</p>
                   <h5 class="card-title">Mission</h5>
                   <p class="card-text">My wife and I both work in helping fields (mental health and social work). We have dedicated our lives to serving those whose lives are not as privileged as our own. My personal mission is to work to expand access to mental health care to all. I have found great satisfaction in providing mental health care, as well as assisting health care organizations develop more efficient means of delivering care to those in need.</p>
                 </div>
