--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </a>
           <div class="card-body">
             <h5 class="card-title">Professional/Portfolio</h5>
-            <p class="card-text">View my resume, see what I am learning, and what I am working on. </p>
+            <p class="card-text">See what I am learning, and projects I am working on. </p>
           </div>
         </div>
       </section>
