removing email from the footer

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -87,7 +87,7 @@
   <div class="row">
     <footer class="col-md-12">
       <div class="card-footer text-white text-center">
-       <p> &copy; 2020 Philip Prewitt, LPC philip.prewitt@gmail.com</p>
+       <p> &copy; 2020 Philip Prewitt, LPC</p>
       </div>
     </footer>
   </div>
