--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <footer class="row">
     <div class="col-md-12">
       <div class="card-footer text-white text-center">
-       <p> &copy; 2020 Philip Prewitt, LPC philip.prewitt@gmail.com</p>
+       <p> &copy; 2020 Philip Prewitt, LPC</p>
       </div>
     </div>
   </footer>
