--- a/Portfolio.html
+++ b/Portfolio.html
@@ -49,32 +49,36 @@
               <!-- project 1 (this site)-->
                 <section class="col-md-4">
                     <div class="card mb-3 bg-light border-0">
-                        <a href="index.html">
-                          <img src="img/abstract-business-code-coder-270348.jpg" class="card-img-top" alt="screen of code" >
+                        <a href="https://pprewitt.github.io/TrailsApp/">
+                          <img src="img/HikingScreenShot.PNG" class="card-img-top" alt="screen of code" >
                         </a>
                         <div class="card-body">
-                          <h5 class="card-title">Responsive Portfolio Site</h5>
-                          <h6 class="card-title">(This Site)</h6>
+                          <h5 class="card-title">Go Hiking App</h5>
+                          <h6 class="card-title">HTML, Bulma styling, JavaScript, APIs for hiking trails and restaurants</h6>
                         </div>
                       </div>
                     </section>
                 <section class="col-md-4">
                   <!-- project 2 (not yet made)-->
                     <div class="card mb-3 bg-light border-0">
-                        <img src="img/abstract-business-code-coder-270348.jpg" class="card-img-top" alt="screen of code" >
+                      <a href="https://pprewitt.github.io/WeatherApp/">
+                        <img src="img/WeatherAppScreenShot.PNG" class="card-img-top" alt="screen of code" >
+                      </a>
                         <div class="card-body">
-                          <h5 class="card-title">Placeholder for Future Project</h5>
-                          <h6 class="card-title">(Coming Soon)</h6>
+                          <h5 class="card-title">Weather Dashboard App</h5>
+                          <h6 class="card-title">Bootstrap, jQuery, moment.js, APIs for weather search and display</h6>
                         </div>
                       </div>
                 </section>
                 <!-- project 3 (not yet made)-->
                 <section class="col-md-4">
                     <div class="card mb-3 bg-light border-0">
-                          <img src="img/abstract-business-code-coder-270348.jpg" class="card-img-top" alt="screen of code" >
-                        <div class="card-body">
-                          <h5 class="card-title">Placeholder for Future Project</h5>
-                          <h6 class="card-title">(Coming Soon)</h6>
+                      <a href="https://pprewitt.github.io/DailyPlanner/">
+                          <img src="img/plannerAppScreenshot.PNG" class="card-img-top" alt="screen of code" >
+                        </a>
+                          <div class="card-body">
+                          <h5 class="card-title">Daily Planner App</h5>
+                          <h6 class="card-title">Bootstrap, jQuery, moment.js platform using local storage to plan your day.</h6>
                         </div>
                       </div>
                 </section>
