adding projects to cards

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/0817df7929.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Philip Prewitt LPC - Portfolio</title>
 </head>
 <body class= "bg-secondary">
@@ -41,15 +42,30 @@
                       </div>
                   <h5 class="card-title">Current Employment</h5>
                   <p class="card-text">I am currently working as a Provider Network Manager for Anthem, Inc. I manage a team of 10 people, running a national network of mental health therapists. I work with my team to develop contracts, administer those contracts, and increase our network provider satisfaction. I am focused on increasing access to mental health care within our provider network. I have contributed business requirements for enhancements to existing systems, and am currently working with a developer to create an appointment setting site for all of our contracted providers. </p>
-                    <a href="https://www.linkedin.com/in/philip-prewitt-b6422911/"><i class="fab fa-linkedin"></i>  Visit my linkedin</a><br>
-                    <a href="https://github.com/pprewitt"><i class="fab fa-github-square"></i>  Visit my github</a>
+                </div>
+                <div class="row">
+                  <div class="col-md-4 d-flex justify-content-center">
+                    <form method="get" target= '_blank' class= "mx-auto" action="Resume.pdf">
+                      <button class = "btn btn-outline-dark px-5 mb-3 mx-auto" type="submit"><i class="far fa-file"></i>  Download my Resume</button>
+                   </form>
+                  </div>
+                  <div class="col-md-4 d-flex justify-content-center">
+                    <form class= "mx-auto" target= '_blank' action="https://www.linkedin.com/in/philip-prewitt-b6422911/">
+                      <button class = "btn btn-outline-dark px-5 mb-3 mx-auto" type="submit"><i class="fab fa-linkedin"></i>  Visit my LinkedIn Profile</button>
+                   </form>
+                  </div>
+                  <div class="col-md-4 d-flex justify-content-center">
+                    <form class= "mx-auto" target= '_blank' action="https://github.com/pprewitt">
+                      <button class = "btn btn-outline-dark px-5 mb-3 mx-auto" type="submit"><i class="fab fa-github-square"></i>  Visit my Github Page</button>
+                   </form>
+                  </div>
                 </div>
               </div>
             <div class="row">
               <!-- project 1 (this site)-->
                 <section class="col-md-4">
                     <div class="card mb-3 bg-light border-0">
-                        <a href="https://pprewitt.github.io/TrailsApp/">
+                        <a target = '_blank' href="https://pprewitt.github.io/TrailsApp/">
                           <img src="img/HikingScreenShot.PNG" class="card-img-top" alt="screen of code" >
                         </a>
                         <div class="card-body">
@@ -61,7 +77,7 @@
                 <section class="col-md-4">
                   <!-- project 2 (not yet made)-->
                     <div class="card mb-3 bg-light border-0">
-                      <a href="https://pprewitt.github.io/WeatherApp/">
+                      <a target= '_blank' href="https://pprewitt.github.io/WeatherApp/">
                         <img src="img/WeatherAppScreenShot.PNG" class="card-img-top" alt="screen of code" >
                       </a>
                         <div class="card-body">
@@ -73,7 +89,7 @@
                 <!-- project 3 (not yet made)-->
                 <section class="col-md-4">
                     <div class="card mb-3 bg-light border-0">
-                      <a href="https://pprewitt.github.io/DailyPlanner/">
+                      <a target= '_blank' href="https://pprewitt.github.io/DailyPlanner/">
                           <img src="img/plannerAppScreenshot.PNG" class="card-img-top" alt="screen of code" >
                         </a>
                           <div class="card-body">
