styling project cards

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -68,9 +68,9 @@
                         <a target = '_blank' href="https://pprewitt.github.io/TrailsApp/">
                           <img src="img/HikingScreenShot.PNG" class="card-img-top" alt="screen of code" >
                         </a>
-                        <div class="card-body">
-                          <h5 class="card-title">Go Hiking App</h5>
-                          <h6 class="card-title">HTML, Bulma styling, JavaScript, APIs for hiking trails and restaurants</h6>
+                        <div class="card-body bg-info rounded-bottom">
+                          <h5 class="card-title text-white">Go Hiking App</h5>
+                          <h6 class="card-title text-white">HTML, Bulma styling, JavaScript, APIs for hiking trails and restaurants</h6>
                         </div>
                       </div>
                     </section>
@@ -80,9 +80,9 @@
                       <a target= '_blank' href="https://pprewitt.github.io/WeatherApp/">
                         <img src="img/WeatherAppScreenShot.PNG" class="card-img-top" alt="screen of code" >
                       </a>
-                        <div class="card-body">
-                          <h5 class="card-title">Weather Dashboard App</h5>
-                          <h6 class="card-title">Bootstrap, jQuery, moment.js, APIs for weather search and display</h6>
+                        <div class="card-body bg-info rounded-bottom">
+                          <h5 class="card-title text-white">Weather Dashboard App</h5>
+                          <h6 class="card-title text-white">Bootstrap, jQuery, moment.js, APIs for weather search and display</h6>
                         </div>
                       </div>
                 </section>
@@ -92,9 +92,9 @@
                       <a target= '_blank' href="https://pprewitt.github.io/DailyPlanner/">
                           <img src="img/plannerAppScreenshot.PNG" class="card-img-top" alt="screen of code" >
                         </a>
-                          <div class="card-body">
-                          <h5 class="card-title">Daily Planner App</h5>
-                          <h6 class="card-title">Bootstrap, jQuery, moment.js platform using local storage to plan your day.</h6>
+                          <div class="card-body bg-info rounded-bottom">
+                          <h5 class="card-title text-white">Daily Planner App</h5>
+                          <h6 class="card-title text-white">Bootstrap, jQuery, moment.js platform using local storage to plan your day.</h6>
                         </div>
                       </div>
                 </section>
